# catalyst

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/com_blockether_catalyst/asgi/: ASGICoreApplication.py  ASGICoreModule.py  ASGITypes.py  __init__.py
src/com_blockether_catalyst/asgi/internal/: __init__.py
src/com_blockether_catalyst/consensus/: ConsensusCore.py  __init__.py
src/com_blockether_catalyst/consensus/internal/: Consensus.py  ConsensusTypes.py  VotingComparison.py  __init__.py
src/com_blockether_catalyst/encoder/: EncoderCore.py  __init__.py
src/com_blockether_catalyst/encoder/internal/: __init__.py
src/com_blockether_catalyst/integrations/agno/: MainWorkflow.py  WorkflowASGIModule.py  WorkflowTypes.py  __init__.py
src/com_blockether_catalyst/integrations/agno/templates/: chat.html
src/com_blockether_catalyst/integrations/agno/templates/partials/: user_message.html  workflow_message.html
src/com_blockether_catalyst/knowledge/: KnowledgeExtractionCore.py  KnowledgeSearchCore.py  KnowledgeVisualizationASGIModule.py  __init__.py
src/com_blockether_catalyst/knowledge/internal/: KnowledgeExtractionBaseTypes.py  KnowledgeExtractionCallBase.py  KnowledgeExtractionTypes.py  PDFKnowledgeExtractor.py  PDKnowledgeExtractorTypes.py  __init__.py
src/com_blockether_catalyst/knowledge/templates/: base.html  knowledge_base.html  markdown_init.html
src/com_blockether_catalyst/prompt/: PromptAlignmentCore.py  __init__.py
src/com_blockether_catalyst/prompt/internal/: PrincipleBasedAlignmentStrategy.py  PromptAlignmentTypes.py  __init__.py
src/com_blockether_catalyst/static_models/model2vec/potion-8M-base/: README.md
src/com_blockether_catalyst/utils/: BatchProcessor.py  TypedCalls.py  __init__.py
src/com_blockether_catalyst/utils/instructor/: InstructorLLMCall.py  MockInstructorLLMCall.py  __init__.py
tests/: __init__.py
tests/com_blockether_catalyst/: __init__.py
tests/com_blockether_catalyst/consensus/: ConsensusCoreTest.py  FlexibleVotingTest.py  RecursiveComparisonLLMIntegrationTest.py  RecursiveComparisonTest.py  VotingConsensusTest.py
tests/com_blockether_catalyst/encoder/: EncoderCoreTest.py
tests/com_blockether_catalyst/integrations/agno/: MCPServerTest.py  WorkflowASGIModuleTest.py  __init__.py
tests/com_blockether_catalyst/knowledge/: KnowledgeSearchCoreTest.py  KnowledgeVisualizationASGIModuleTest.py
tests/com_blockether_catalyst/knowledge/internal/: KnowledgeExtractionTypesTest.py
tests/com_blockether_catalyst/prompt/: PromptAlignmentCoreEnhancedTest.py  PromptAlignmentCoreTest.py  __init__.py
tests/com_blockether_catalyst/prompt/internal/: PrincipleBasedAlignmentStrategyTest.py  __init__.py
tests/com_blockether_catalyst/utils/: BatchProcessorTest.py
tools/: KnowledgeBaseVisualization.py  KnowledgeExtraction.py  PromptRefinementCLI.py
verification/: localstack.py
